scripts/nullaway/wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8.txt
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/lib/json/XML.java:98: error: [NullAway] dereferenced expression string is @Nullable
        for (int i = 0, len = string.length(); i < len; i++) {
                                    ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/lib/json/XML.java:421: error: [NullAway] passing @Nullable parameter 'v' where @NonNull is required
                b.append(toString(v, (tagName == null) ? "array" : tagName));
                                  ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/lib/json/CDL.java:215: error: [NullAway] dereferenced expression ja is @Nullable
        for (int i = 0; i < ja.length(); i += 1) {
                              ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/lib/json/CDL.java:251: error: [NullAway] dereferenced expression ja is @Nullable
        JSONObject jo = ja.optJSONObject(0);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/lib/json/Test.java:313: error: [NullAway] dereferenced expression a is @Nullable
            System.out.println(a.toString(4));
                                ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/lib/json/Test.java:316: error: [NullAway] dereferenced expression a is @Nullable
            System.out.println(a.toString(4));
                                ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/importer/MysqlImporter.java:44: error: [NullAway] dereferenced expression e.getAttributes() is @Nullable
                            e.getAttributes().add(attribute);
                                             ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/importer/MysqlImporter.java:56: error: [NullAway] dereferenced expression type is @Nullable
        if (type.matches("int.*")) {
                ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/importer/MysqlImporter.java:71: error: [NullAway] dereferenced expression text is @Nullable
        return text.substring(0, 1).toUpperCase() + text.substring(1);
                   ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/model/Element.java:31: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.parent = parent;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/model/Element.java:33: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.package1 = package1;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/model/Element.java:34: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.attributes = attributes;
                        ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/model/Element.java:41: error: [NullAway] assigning @Nullable expression to @NonNull field
        parent = null;
               ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/model/Element.java:42: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.tableName = tableName;
                       ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/model/Attribute.java:31: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.name = name;
                  ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/view/PElement.java:48: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.element = element;
                     ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/view/PElement.java:174: error: [NullAway] dereferenced expression element.getAttributes() is @Nullable
        Attribute attribute = new Attribute(element.getAttributes().size() + 1, "Attribute" + taAttributes.getRowCount(), new Element("", "", ""), Cardinality.Single, false, "", "", true, "");
                                                                   ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/view/PElement.java:228: error: [NullAway] dereferenced expression element.getAttributes() is @Nullable
                    element.getAttributes().remove(attribute);
                                           ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/view/PElement.java:417: error: [NullAway] enhanced-for expression element.getAttributes() is @Nullable
        for (Attribute attribute : element.getAttributes()) {
                                                        ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/view/DKey.java:30: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.key = key;
                 ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/view/DKey.java:33: error: [NullAway] dereferenced expression key is @Nullable
        setTitle(key.getName());
                    ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/view/DKey.java:96: error: [NullAway] dereferenced expression e.getAttributes() is @Nullable
        pAttributes.setLayout(new GridLayout(e.getAttributes().size(), 1));
                                                              ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/view/DKey.java:96: error: [NullAway] dereferenced expression e is @Nullable
        pAttributes.setLayout(new GridLayout(e.getAttributes().size(), 1));
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/view/NextGenHelper.java:26: error: [NullAway] dereferenced expression table is @Nullable
        TableColumnModel columnModel = table.getColumnModel();
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/dao/FileManager.java:53: error: [NullAway] passing @Nullable parameter 'directory' where @NonNull is required
        return (new File(directory)).mkdirs();
                         ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/dao/FileManager.java:58: error: [NullAway] passing @Nullable parameter 'directory' where @NonNull is required
        return new File(directory).exists();
                        ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/dao/DAO.java:127: error: [NullAway] dereferenced expression cardinality is @Nullable
                Cardinality c = (cardinality.equals("Multiple")) ? Cardinality.Multiple : Cardinality.Single;
                                            ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/generator/PHPObjectOriented.java:72: error: [NullAway] enhanced-for expression e.getAttributes() is @Nullable
            for (Attribute a : e.getAttributes()) {
                                              ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/generator/PHPObjectOriented.java:95: error: [NullAway] dereferenced expression primary is @Nullable
            for (Attribute a : primary.getAttributes()) {
                                      ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/generator/PHPObjectOriented.java:174: error: [NullAway] dereferenced expression text is @Nullable
        return text.substring(0, 1).toUpperCase() + text.substring(1);
                   ^
    (see http://t.uber.com/nullaway )
../wpi/urle514e161fe_pericodiaz89_NextGen_tgz-pJ8-lib_json_TestJ8/src/nextgen/generator/JavaScriptClient.java:44: error: [NullAway] enhanced-for expression e.getAttributes() is @Nullable
            for (Attribute a : e.getAttributes()) {
                                              ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
31 errors
